kubernetes/cdpb-test-orchestrator/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdpb-test-orchestrator
  namespace: cdpb-tester
  labels:
    app: cdpb-test-orchestrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cdpb-test-orchestrator
  template:
    metadata:
      labels:
        app: cdpb-test-orchestrator
    spec:
      securityContext:
        runAsUser: 5678
        runAsGroup: 450
        #fsGroup: 450
      volumes:
        - name: nfs-volume
          nfs:
            # URL for the NFS server
            server: oersted.informatik.uni-leipzig.de
            # Path of the NFS share
            path: /raid/kube_storage
      containers:
        - name: cdpb-test-orchestrator
          image: registry.kube.informatik.uni-leipzig.de/nicole/cdpb-test-orchestrator:latest
          volumeMounts:
            - name: nfs-volume
              mountPath: /var/nfs
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: regcred
