kubernetes/cdpb-test-orchestrator/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cdpb-test-orchestrator
  namespace: cdpb-tester
spec:
  type: NodePort
  selector:
    app: cdpb-test-orchestrator
  ports:
    - nodePort: 30104
      port: 8080
      protocol: TCP
      targetPort: 8080
